[gd_scene load_steps=11 format=2]

[ext_resource path="res://Imagenes/Zombie/Zombie.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Zombie.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 0.9, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 18, 14, 15, 16, 17, 19 ]
}

[sub_resource type="Animation" id=2]
resource_name = "IdleE"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkE"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 0.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18.5, 19 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7.5, 11 )

[node name="Zombie" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Idle" type="Sprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 1.30729, 1.30729 )
texture = ExtResource( 1 )
hframes = 13
vframes = 6

[node name="AnimationZombie" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/IdleE = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/WalkE = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 20.5 )
shape = SubResource( 1 )

[node name="Area_Vision" type="Area2D" parent="."]

[node name="RangoVision" type="CollisionPolygon2D" parent="Area_Vision"]
position = Vector2( 51.256, 0 )
scale = Vector2( 2.116, 0.964 )
polygon = PoolVector2Array( -27.1462, -1.19077, 38.6314, -32.1577, 38.6314, 28.0083 )

[node name="Sprite" type="Sprite" parent="Area_Vision/RangoVision"]
modulate = Color( 0.0235294, 0.564706, 1, 1 )
position = Vector2( 20.5969, -1.55602 )
scale = Vector2( 0.573591, 0.43763 )
texture = ExtResource( 3 )

[node name="Area_Ataque" type="Area2D" parent="."]
modulate = Color( 0, 0, 0, 1 )

[node name="HitBoxAtaque" type="CollisionShape2D" parent="Area_Ataque"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 3.5, 2 )
shape = SubResource( 6 )

[node name="Area_Choque" type="Area2D" parent="."]

[node name="HitBoxChoque" type="CollisionShape2D" parent="Area_Choque"]
position = Vector2( 0.5, 10 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="AnimationZombie" to="." method="_on_AnimationZombie_animation_finished"]
[connection signal="body_entered" from="Area_Vision" to="." method="_on_Area_Vision_body_entered"]
[connection signal="body_exited" from="Area_Vision" to="." method="_on_Area_Vision_body_exited"]
[connection signal="body_entered" from="Area_Ataque" to="." method="_on_Area_Ataque_body_entered"]
[connection signal="body_exited" from="Area_Ataque" to="." method="_on_Area_Ataque_body_exited"]
[connection signal="body_entered" from="Area_Choque" to="." method="_on_Area_Choque_body_entered"]
